--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
